2011-06-14

	* src/textview.c: textview_part_widget_destroy_notify(): fixed destroy
	  notify handler.

2011-06-13

	* src/textview.c: highlight part widgets on mouse over.

2011-06-13

	* src/textview.c
	  src/mimeview.[ch]: implemented popup menu of attachments in text
	  view.

2011-06-13

	* src/textview.c: fixed handling of button release event.

2011-06-10

	* libsylph/procmsg.c
	  libsylph/libsylph-0.def: procmsg_add_messages_from_queue():
	  fixed an error when removing queued messages on win32.

2011-06-10

	* src/compose.c
	  plugin/test/test.c: changed the spec of compose-send signal
	  because the previous one prohibited sending if the signal is not
	  used.

2011-06-10

	* src/textview.c: added border line before and after headers.
	  Made attachments display more graphical.

2011-06-09

	* src/account_dialog.c
	  src/prefs_filter.c: fixed duplicated keyboard accelerators.

2011-06-08

	* libsylph/procmsg.[ch]
	  libsylph/folder.c: remove queue headers when moving messages from
	  a queue folder (fixes Debian BTS #493546).

2011-06-08

	* src/messageview.c
	  src/plugin.[ch]
	  src/plugin-marshal.list
	  plugin/test/test.c: added a new plug-in API: "messageview-show".

2011-06-08

	* src/compose.c
	  src/plugin.[ch]
	  src/plugin-marshal.list
	  plugin/test/test.c: added a new plug-in API: "compose-send".

2011-06-06

	* src/compose.c: compose_generate_msgid(): don't use mailbox part
	  of address directly, instead use md5 hash of random number + mailbox
	  part.

2011-06-06

	* src/compose.c: compose_send(): don't close compose window when
	  saving to outbox failed.

2011-05-18

	* libsylph/codeconv.c: conv_encode_header(): replaced alloca() with
	  g_malloc() and g_strndup().

2011-05-18

	* libsylph/folder.[ch]
	  libsylph/imap.[ch]
	  src/mainwindow.c: cancel online mode switch if active sessions
	  exist (fixes crash on offline switch while IMAP session is active).

2011-05-13

	* src/textview.c: textview_make_clickable_parts(): removed alloca()