@@ -2,6 +2,7 @@
 
 	* src/textview.c: textview_part_widget_destroy_notify(): fixed destroy
 	  notify handler.
+	  Use prelight state.
 
 2011-06-13
 
